--- a/profile.css
+++ b/profile.css
@@ -229,6 +229,7 @@ header {
 
 .toggle-btn {
   cursor: pointer;
+  padding: 10px 0;
 }
 
 .toggle-btn img {
