--- a/signup.css
+++ b/signup.css
@@ -207,6 +207,7 @@ header {
 
 .toggle-btn {
     cursor: pointer;
+    padding: 10px 0;
 }
 
 .toggle-btn img {
