--- a/wai.css
+++ b/wai.css
@@ -246,6 +246,7 @@ header {
 /* Toggle Button */
 .toggle-btn {
     cursor: pointer;
+    padding: 10px 0;
 }
 
 .toggle-btn img {
